# AgentSec

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md
.cursor/rules/: bilingual-ui.mdc
.github/workflows/: ci.yml  release.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/electron/: config.ts  main.ts  paths.ts  preload.cjs  preload.ts  updater.ts
app/scripts/: capture-readme-screenshots.mjs
app/src/: App.tsx  configBridge.ts  main.tsx  navigation.ts  screenshotBootstrap.ts  selectors.ts  store.tsx  styles.css  theme.ts  (+1 more)
docs/: README.md  config.example.json
engine/: pyproject.toml
engine/agentsec_engine/: __init__.py  __main__.py  agent_manager.py  asset_manager.py  config.py  enrichment.py  ipc.py  models.py  orchestrator.py  paths.py  registry_client.py  reporter.py  runtime.py  store.py  threat_whitelist.py  update_check.py
engine/agentsec_engine/data/: fixtures.py
engine/agentsec_engine/data/atr_rules/: MANIFEST.yaml  excluded_rules.yaml
engine/agentsec_engine/detectors/: __init__.py  cve.py  exposure.py
engine/agentsec_engine/discovery/: __init__.py  base.py  claude.py  hermes.py  openclaw.py  parsers.py  registry.py
engine/packaging/: run_engine.py
engine/tests/: conftest.py  test_claude_adapter.py  test_config.py  test_hermes_openclaw_adapters.py  test_parsers.py  test_paths.py  test_threat_whitelist.py
scripts/: build-engine.cjs  export-demo-snapshot.py  package-dmg.sh  package-win.ps1  run-built.sh  run-dev.sh  run-engine-tests.sh  setup-engine.ps1  setup-engine.sh
(+34 files in other folders)
