[project]
name = "agentsec-engine"
version = "0.1.0"
description = "agentSec local scan engine: exposure (ATR) + CVE (OSV) + asset management"
requires-python = ">=3.10"
dependencies = [
    # 暴露面引擎：pyATR（内置 ATR 规则，Layer1 regex/pattern，离线）
    "pyatr>=0.2.6",
    # CVE 联网检测：OSV（osv.dev /v1/query，纯 stdlib urllib）+ cvss 解析评分
    "cvss>=2.6",
    # 真机 Adapter 解析：Hermes config.yaml / SKILL.md frontmatter
    "pyyaml>=6.0",
    # 资产管理：安全往返修改 config.yaml（保留注释/格式）
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentsec_engine*"]

[tool.setuptools.package-data]
agentsec_engine = [
    "data/atr_rules/*.yaml",
    "data/atr_rules/*.yml",
]
